--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Intellipaat </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
-<h2 ALIGN=CENTER>Hello world!</h2>
+<h2 ALIGN=CENTER>capstone project successfully done in prod server !</h2>
 </body>
 </html>
